<resources>
    <string name="app_name">Client</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_project_list">ProjectListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="logout">Logout</string>
    <string name="project_list">Project List</string>
    <string name="CreateProject">Create Project</string>
    <string name="newProjectName">Name</string>
    <string name="newProjectDescription">Description</string>
    <string name="keyWords">Add keywords</string>
    <string name="button_select_collaborators">Select Collaborators</string>
    <string name="finalize_project">finalize project</string>
    <string name="UserFindbyID">User Find by ID</string>
    <string name="UserFindbyName">User Find by Name</string>
    <string name="addMemberstoProject">Add members to a project</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="project_name">Project Name</string>
    <string name="modification_date">Last Modified</string>
    <string name="deadline">Deadline</string>
    <string name="delete">Delete</string>
    <string name="personal">Personal</string>
    <string name="user_profile">Profile</string>
    <string name="task_list">Task List</string>
    <string name="Keywords">Keywords</string>
    <string name="SearchForProject">Search for Projects</string>
    <string name="projectFindByname">Project Find by Name</string>
    <string name="projectFindByKey">Keywords</string>
    <string name="findProjectname">Name</string>
    <string name="Find">Find</string>
    <string name="show">Show</string>
    <string name="back">Back</string>
    <string name="select_ddl">Select ddl</string>
    <string name="group">Group</string>
    <string name="gone">gone</string>
    <string name="visible">visible</string>
    <string name="deadline_yyyy_mm_dd">Deadline: YYYY-MM-DD</string>

</resources>
