<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    style="?android:attr/buttonBarStyle"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/create_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateProject"
        android:textSize="12sp"
        />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/logout_button"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/userProfile"
        android:text="@string/user_profile"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/searchProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchForProject"
        android:textSize="12sp"
        />


</LinearLayout>
