<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="84dp"
        android:layout_margin="10dp"
        android:contentDescription="TODO"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/project_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:layout_margin="@dimen/mini_margin"
                />

            <TextView
                android:id="@+id/project_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_margin="@dimen/mini_margin"
                android:textSize="12sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deadline_valueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:layout_margin="@dimen/mini_margin"
                />

            <TextView
                android:id="@+id/deadline_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/modification_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modification_date"
                android:layout_margin="@dimen/mini_margin"
                />

            <TextView
                android:id="@+id/modification_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_margin="@dimen/mini_margin"
                android:textSize="12sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/is_favorite_button"
            android:layout_width="66dp"
            android:layout_height="45dp"
            android:layout_margin="@dimen/mini_margin"
            android:textSize="8sp"
            />


        <Button
            android:id="@+id/delete_button"
            android:layout_width="66dp"
            android:layout_height="45dp"
            android:layout_margin="@dimen/mini_margin"
            android:textSize="8sp"
            android:text="@string/delete"
            />

    </LinearLayout>

</LinearLayout>
