<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.example.client.ui.createProject.CreateProjectViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.createProject.CreateProjectActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="99dp"
            android:layout_height="78dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/newProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/newProjectName"
            app:layout_constraintBaseline_toBaselineOf="@+id/editNewProjectName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/newProjectDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newProjectName"
            android:layout_marginStart="10dp"
            android:text="@string/newProjectDescription"
            app:layout_constraintBaseline_toBaselineOf="@+id/editNewProjectDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/newProjectKeywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newProjectDescription"
            android:layout_marginStart="10dp"
            android:text="@string/Keywords"
            app:layout_constraintBaseline_toBaselineOf="@+id/editNewProjectKeywords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/toggle_button_set_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="94dp"
            android:checked="@={viewmodel.isPersonal}"
            android:text="@{viewmodel.isPersonal ? @string/personal : @string/group}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNewProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/newProjectName"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editNewProjectDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/newProjectDescription"
            app:layout_constraintTop_toBottomOf="@+id/editNewProjectName"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/editNewProjectKeywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:text="@={viewmodel.keywords}"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/newProjectKeywords"
            app:layout_constraintTop_toBottomOf="@+id/editNewProjectDescription"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/editSelectDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:ems="10"
            android:text="@string/deadline_yyyy_mm_dd"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/selectDDL"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/selectDDL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="20dp"
            android:text="@string/select_ddl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_select_collaborators"
            app:layout_constraintTop_toBottomOf="@+id/editNewProjectDescription" />

        <Button
            android:id="@+id/button_select_collaborators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/button_select_collaborators"
            android:visibility='visible'
            app:layout_constraintBaseline_toBaselineOf="@+id/button_finalize_project"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_finalize_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/finalize_project"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_select_collaborators"
            app:layout_constraintTop_toBottomOf="@+id/selectDDL" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_select_collaborators" />

        <TextView
            android:id="@+id/errorView"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/resultView"
            android:text="@{viewmodel.error}"
            android:visibility='@{viewmodel.error == null ? View.VISIBLE : View.GONE }'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>